Component widths, responsiveness and dark mode fix

--- a/app/src/Components/LoanAgreements/LoanAgreementHistory/LoanAgreementHistory.module.css
+++ b/app/src/Components/LoanAgreements/LoanAgreementHistory/LoanAgreementHistory.module.css
@@ -10,3 +10,12 @@
     line-height: 20px;
     margin: 4px 0;
 }
+
+.loanAgreement a {
+    color: var(--buttonHoverColor);
+}
+
+.totalSum {
+    font-weight: 600;
+    font-style: italic;
+}
